etc/docker/kubernetes/deploy-mysql.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql-app
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      volumes:
        - 
          name: mysql-vol
          persistentVolumeClaim:
            claimName: mysql
        - 
          configMap:
            name: mysql-init
          name: mysql-init-vol
      containers:
        - 
          name: mysql-db-instance
          ports:
            - 
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - 
              mountPath: /var/lib/mysql
              name: mysql-vol
            - 
              mountPath: /docker-entrypoint-initdb.d
              name: mysql-init-vol
          image: 'mysql:5.7'
          args:
            - $(MYSQL_ARG_1)
            - $(MYSQL_ARG_2)
            - $(MYSQL_ARG_3)
            - $(MYSQL_ARG_4)
