etc/docker/kubernetes/deploy-xwiki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xwiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xwiki-app
  template:
    metadata:
      labels:
        app: xwiki-app
    spec:
      volumes:
        - 
          name: xwiki-vol
          persistentVolumeClaim:
            claimName: xwiki
      containers:
        - 
          image: 'xwiki:stable'
          name: xwiki-app-instance
          ports:
            - 
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - 
              mountPath: /usr/local/xwiki          
              name: xwiki-vol
