etc/docker/kubernetes/xwiki-mysql.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: xwiki-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xwiki-mysql-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: xwiki-mysql-app
    spec:
      volumes:
        - name: mysql-vol
          persistentVolumeClaim:
            claimName: mysql
        - name: mysql-init-vol
          configMap:
            name: mysql-init
            defaultMode: 440
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: mysql-db-instance
          ports:
            - containerPort: 3306
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mysql-vol
              mountPath: /var/lib/mysql
            - name: mysql-init-vol
              mountPath: /docker-entrypoint-initdb.d
          terminationMessagePolicy: File
          image: 'mysql:5.7'
          args:
            - $(MYSQL_ARG_1)
            - $(MYSQL_ARG_2)
            - $(MYSQL_ARG_3)
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
