etc/docker/kubernetes/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-xwiki
spec:
  selector:
    app: mysql-app
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
