etc/docker/kubernetes/service-xwiki.yaml
apiVersion: v1
kind: Service
metadata:
  name: xwiki-web
spec:
  selector:
    app: xwiki-app
  ports:
    - 
      port: 8080
