etc/docker/kubernetes/route-xwiki.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: web
spec:
  host: 0-xwiki.apps.openshift.sebastian-colomar.es
  to:
    kind: Service
    name: xwiki-web
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
