etc/docker/kubernetes/docker-xwiki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql-app
  template:
    metadata:
      labels:
        app: mysql-app
    spec:
      volumes:
        - 
          name: mysql-vol
          persistentVolumeClaim:
            claimName: mysql
        - 
          configMap:
            name: mysql-init
          name: mysql-init-vol
      containers:
        - 
          args:
            - $(MYSQL_ARG_1)
            - $(MYSQL_ARG_2)
            - $(MYSQL_ARG_3)
            - $(MYSQL_ARG_4)
          image: 'mysql:5.7'
          name: mysql-db-instance
          ports:
            - 
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - 
              mountPath: /var/lib/mysql
              name: mysql-vol
            - 
              mountPath: /docker-entrypoint-initdb.d
              name: mysql-init-vol
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xwiki
spec:
  selector:
    matchLabels:
      app: xwiki-app
  template:
    metadata:
      labels:
        app: xwiki-app
    spec:
      volumes:
        - 
          name: xwiki-vol
          persistentVolumeClaim:
            claimName: xwiki
      containers:
        - 
          image: 'xwiki:stable'
          name: xwiki-app-instance
          ports:
            - 
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - 
              mountPath: /usr/local/xwiki          
              name: xwiki-vol
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql
spec:
  ingress:
    - 
      from:
        - 
          podSelector:
            matchLabels:
              app: xwiki-app
      ports:
        - 
          port: 3306
  podSelector:
    matchLabels:
      app: mysql-app
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web
spec:
  host: xwiki-x.apps.openshift.sebastian-colomar.es
  to:
    kind: Service
    name: xwiki-web
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  wildcardPolicy: None
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-xwiki
spec:
  ports:
    - 
      port: 3306
  selector:
    app: mysql-app
---
apiVersion: v1
kind: Service
metadata:
  name: xwiki-web
spec:
  selector:
    app: xwiki-app
  ports:
    - 
      port: 8080
