etc/docker/kubernetes/firewall-mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql
spec:
  podSelector:
    matchLabels:
      app: mysql-app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: xwiki-app
      ports:
        - protocol: TCP
          port: 3306
